# kbDaw

./: .gitignore  CmakeLists.txt  README.md  cmake.txt  main.cpp  project.rc
cmake/: CPM.cmake
docs/: Schema.md
lib/: AppFrame.cpp  AppFrame.hpp  CMakeLists.txt
lib/AudioEngine/: AudioEngine.cpp  AudioEngine.hpp  CMakeLists.txt
lib/GUI/: AppFrame.cpp  AppFrame.hpp  CMakeLists.txt  TimeLine.cpp  TimeLine.hpp
lib/Model/: CMakeLists.txt  FullModel.cpp  FullModel.hpp  Model.hpp  RTModel.hpp  SchemaCreation.cpp
